@@ -3,7 +3,10 @@ $Id$
 This file gives a brief overview of the major changes between each ike-scan
 release.  For more details please read the ChangeLog file.
 
-ike-scan v1.8.5:
+ike-scan v1.8.6:
+
+* New --rcookie option allows the responder cookie to be set to the specified
+  value in outgoing packets.  The default is zero.
 
 * psk-crack allows the dictionary to be read from stdin with the
   --dictionary=- option.  This allows another program to generate
