@@ -1,5 +1,11 @@
 $Id$
 
+2006-12-27 Roy Hills <Roy.Hills@nta-monitor.com>
+
+	* ike-scan.c, isakmp.c: New option --rcookie to set the responder
+	  cookie to the specified value.  Modified make_isakmp_header() to
+	  support specification of the responder cookie.
+
 2006-12-23 Roy Hills <Roy.Hills@nta-monitor.com>
 
 	* psk-crack.c, psk-crack.h: Moved nortel_user into psk_entry struct
